@@ -9,16 +9,25 @@ public class SolveResult {
     private List<Step> steps;
     private long timeToSolve;
 
-    // Có lời giải
+    // Constructor chung
     public SolveResult(boolean solved, List<Step> steps, long timeToSolve) {
         this.solved = solved;
-        this.steps = steps == null ? null : Collections.unmodifiableList(steps);
+        this.steps = steps == null ? List.of() : List.copyOf(steps);
         this.timeToSolve = timeToSolve;
     }
 
-    // Bảng đã được giải xong
+    // Tìm ra được lời giải
+    public static SolveResult solved(List<Step> steps, long timeToSolve) {
+        // Kiểm tra liệu có tồn tại bước giải không
+        if (steps == null || steps.isEmpty()) {
+            throw new IllegalArgumentException("Solved result must contain steps");
+        }
+        return new SolveResult(true, steps, timeToSolve);
+    }
+
+    // Bảng đã được giải thành công trước đó
     public static SolveResult alreadySolved() {
-        return new SolveResult(true, List.of(), 0);
+        return new SolveResult(true, null, 0);
     }
 
     // Không có lời giải
